--- a/src/app.css
+++ b/src/app.css
@@ -1,26 +1,37 @@
 :root {
   --main-color: #3b007f;
+  --main-color-dark: #24124d;
   --secondary-color: #22eaaa;
-}
-
-@font-face {
-  font-family: 'Gilroy';
-  src: url('/public/assets/fonts/Gilroy-Light.woff2') format('woff2'),
-    url('/public/assets/fonts/Gilroy-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Gilroy';
-  src: url('/public/assets/fonts/Gilroy-ExtraBold.woff2') format('woff2'),
-    url('/public/assets/fonts/Gilroy-ExtraBold.woff') format('woff');
-  font-weight: 800;
-  font-style: normal;
+  --note-color: #fff0cc;
 }
 
 body {
-  font-family: 'Gilroy', system-ui, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 900;
+  letter-spacing: 0.025rem;
+  font-size: 3.5em;
+  color: white;
+  margin: 0;
+}
+
+.header {
+  background-color: var(--main-color-dark);
+  padding: 100px;
+}
+
+.header-after {
+  width: 100%;
+  height: 250px;
+  background-size: 100%;
+  background: transparent url('/assets/images/waves.svg') top center no-repeat;
+  position: relative;
+  top: -1px;
 }
