--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,7 @@
   --main-color-dark: #24124d;
   --secondary-color: #22eaaa;
   --note-color: #fff0cc;
+  --main-width: 1280px;
 }
 
 @font-face {
@@ -50,10 +51,19 @@ h2 {
   font-family: 'Playfair Display', serif;
   font-weight: 900;
   letter-spacing: 0.025rem;
-  font-size: 2.5em;
+  font-size: 2.8em;
   margin: 0;
   color: var(--main-color-dark);
   margin-bottom: 0.75em;
+}
+
+h3 {
+  font-weight: 900;
+  letter-spacing: 0.025rem;
+  font-size: 1.8em;
+  margin: 0;
+  color: var(--main-color-dark);
+  margin-bottom: 0.25em;
 }
 
 .logo-text {
