Added sections for crips and partners

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
   --main-color: #3b007f;
   --main-color-dark: #24124d;
   --secondary-color: #22eaaa;
+  --light-color: #f3f7fc;
   --note-color: #fff0cc;
   --main-width: 1280px;
 }
